--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
-    <jacoco.exclusions>**/entities**/*.*,**/adapters/resources/domain**/*.*</jacoco.exclusions>
+    <jacoco.exclusions>
+      **/entities**/*.*,**/adapters/resources/domain**/*.*,
+      **/br/com/marcelbraghini/adapters/scheduler**/*.*,
+      **/br/com/marcelbraghini/infrastructure/brasilbitcoin/domain**/*.*
+    </jacoco.exclusions>
     <jacoco.maven.plugin>0.8.2</jacoco.maven.plugin>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>11</maven.compiler.source>
