--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
 quarkus.log.console.level=INFO
 quarkus.log.console.color=true
-prod.quarkus.http.port=${PORT:9090}
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+
+quarkus.swagger-ui.path=/swagger
+quarkus.swagger-ui.always-include=true
+mp.openapi.extensions.smallrye.info.title=Investiment API
+mp.openapi.extensions.smallrye.operationIdStrategy=METHOD
+mp.openapi.extensions.smallrye.info.version=1.0.0-SNAPSHOT
+mp.openapi.extensions.smallrye.info.contact.name=Marcel Braghini
+mp.openapi.extensions.smallrye.info.contact.email=marcel.braghini@gmail.com
+mp.openapi.extensions.smallrye.info.description=Retrieve your's investiments
 
 quarkus.mongodb.database = investiment
 quarkus.mongodb.connection-string = mongodb://root:root@localhost:27017/admin
