--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,15 @@
   <version>1.0.0-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
-    <jacoco.exclusions>
-      **/entities**/*.*,**/adapters/resources/domain**/*.*,
+    <jacoco.exclusions>**/entities**/*.*,**/adapters/resources/domain**/*.*,
       **/br/com/marcelbraghini/adapters/scheduler**/*.*,
-      **/br/com/marcelbraghini/infrastructure/brasilbitcoin/domain**/*.*
-    </jacoco.exclusions>
+      **/br/com/marcelbraghini/infrastructure/brasilbitcoin/domain**/*.*</jacoco.exclusions>
     <jacoco.maven.plugin>0.8.2</jacoco.maven.plugin>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <mockito.version>3.1.0</mockito.version>
+    <mongobee.version>0.13</mongobee.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <quarkus-plugin.version>1.11.3.Final</quarkus-plugin.version>
@@ -24,7 +23,6 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.11.3.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
-    <mongobee.version>0.13</mongobee.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -87,6 +85,10 @@
       <groupId>com.github.mongobee</groupId>
       <artifactId>mongobee</artifactId>
       <version>${mongobee.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
     </dependency>
   </dependencies>
   <build>
