--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,16 @@ quarkus.mongodb.connection-string = mongodb://root:root@localhost:27017/admin
 
 quarkus.scheduler.enabled = true
 scheduling.generate.coin.query.price = 10s
+scheduling.publish.rabbitmq.message.display = 30s
 
 br.com.marcelbraghini.infrastructure.brasilbitcoin.GetCryptoPrice/mp-rest/url = https://brasilbitcoin.com.br
 br.com.marcelbraghini.infrastructure.brasilbitcoin.GetCryptoPrice/mp-rest/scope = javax.inject.Singleton
+
+quarkus.rabbitmqclient.virtual-host=/
+quarkus.rabbitmqclient.username=guest
+quarkus.rabbitmqclient.password=guest
+quarkus.rabbitmqclient.hostname=localhost
+quarkus.rabbitmqclient.port=5672
+message.display.exchange=message.display.exchange.topic
+message.display.queue=message.display.queue
+message.display.routing-key=display
