--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
     <quarkus.platform.version>1.11.3.Final</quarkus.platform.version>
     <surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
+    <rabbitmq.version>0.2.1</rabbitmq.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -89,6 +90,11 @@
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkiverse.rabbitmqclient</groupId>
+      <artifactId>quarkus-rabbitmq-client</artifactId>
+      <version>${rabbitmq.version}</version>
     </dependency>
   </dependencies>
   <build>
