Added send message display

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,13 @@ quarkus.mongodb.database = investiment
 quarkus.mongodb.connection-string = mongodb://root:root@localhost:27017/admin
 
 quarkus.scheduler.enabled = true
-scheduling.generate.coin.query.price = 10s
+scheduling.generate.coin.query.price = 15s
+scheduling.send.message.display.time = 10s
+scheduling.prepare.message.display.time = 60s
+scheduling.send.message.display.key = myKey
 
 br.com.marcelbraghini.infrastructure.brasilbitcoin.GetCryptoPrice/mp-rest/url = https://brasilbitcoin.com.br
 br.com.marcelbraghini.infrastructure.brasilbitcoin.GetCryptoPrice/mp-rest/scope = javax.inject.Singleton
+
+br.com.marcelbraghini.infrastructure.nodemcudisplay.SendMessageDisplay/mp-rest/url = http://192.168.90.112
+br.com.marcelbraghini.infrastructure.nodemcudisplay.SendMessageDisplay/mp-rest/scope = javax.inject.Singleton
